# hns-core

./: .brave_gclient  .clangd  .eslintrc.js  .gitattributes  .gitignore  .prettierrc.js  .sonarcloud.properties  BUILD.gn  CONTRIBUTING.md  DEPS  Jenkinsfile  PRESUBMIT.py  README.md  chromium_presubmit_config.json5  hns_paks.gni  hns_repack_locales.gni  jest.config.js  package-lock.json  package.json  tsconfig-webpack.json  tsconfig.json
android/: BUILD.gn  android_browser_tests.gni  hns_java_resources.gni  hns_java_sources.gni  hns_xml_preprocessor.gni  xml_processor.py  xml_processor.pydeps
android/browsertests_apk/: AndroidManifest.xml.jinja2
android/feed/: hns_feed_java_sources.gni
android/java/: AndroidManifest.xml  AndroidManifest_intent_filters.xml  apk_for_test.flags  proguard.flags
android/javatests/: AndroidManifest.xml
app/: BUILD.gn  DEPS  access_code_cast_strings.grdp  app_management_strings.grdp  bookmarks_strings.grdp  command_utils.cc.template  command_utils.h  command_utils_browsertest.cc  command_utils_unittest.cc  entitlements.gni  extensions_strings.grdp  extensions_strings_override.grdp  file_manager_strings.grdp  generate_command_metadata.py  generated_resources.grd  generated_resources_override.grd  gmc_strings.grdp  hns_command_ids.h  hns_command_line_helper.cc  hns_command_line_helper.h  hns_command_line_helper_unittest.cc  hns_exe.rc  hns_exe.ver  hns_generated_resources.grd  hns_main_delegate.cc  hns_main_delegate.h  hns_main_delegate_browsertest.cc  hns_main_delegate_runtime_flags_browsertest.cc  hns_settings_strings.grdp  hns_strings.grd  hns_strings_override.grd  media_router_strings.grdp  nearby_share_strings.grdp  nux_strings.grdp  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  os_settings_strings_override.grdp  password_manager_ui_strings.grdp  printing_strings.grdp  profiles_strings.grdp  (+8 more)
app/android/: BUILD.gn
app/linux/: BUILD.gn
app/mac/: BUILD.gn
app/resources/: chromium_strings_af.xtb  chromium_strings_am.xtb  chromium_strings_ar.xtb  chromium_strings_as.xtb  chromium_strings_az.xtb  chromium_strings_be.xtb  chromium_strings_bg.xtb  chromium_strings_bn.xtb  chromium_strings_bs.xtb  chromium_strings_ca.xtb  chromium_strings_cs.xtb  chromium_strings_cy.xtb  chromium_strings_da.xtb  chromium_strings_de.xtb  chromium_strings_el.xtb  chromium_strings_en-GB.xtb  chromium_strings_es-419.xtb  chromium_strings_es.xtb  chromium_strings_et.xtb  chromium_strings_eu.xtb  chromium_strings_fa.xtb  chromium_strings_fi.xtb  chromium_strings_fil.xtb  chromium_strings_fr-CA.xtb  chromium_strings_fr.xtb  chromium_strings_gl.xtb  chromium_strings_gu.xtb  chromium_strings_hi.xtb  chromium_strings_hr.xtb  chromium_strings_hu.xtb  chromium_strings_hy.xtb  chromium_strings_id.xtb  chromium_strings_is.xtb  chromium_strings_it.xtb  chromium_strings_iw.xtb  chromium_strings_ja.xtb  chromium_strings_ka.xtb  chromium_strings_kk.xtb  chromium_strings_km.xtb  chromium_strings_kn.xtb  (+176 more)
app/theme/: BUILD.gn  hns_theme_resources.grd  hns_unscaled_resources.grd
app/vector_icons/: BUILD.gn  hns_sad.icon  hns_translate.icon  sidebar_chat.icon  sidebar_edit.icon  sidebar_toolbar_button.icon  sidebar_toolbar_button_right.icon  vector_icons.cc.template  vector_icons.h.template  vertical_tab_strip_toggle_button.icon  vpn_indicator_error.icon  vpn_indicator_off.icon  vpn_indicator_on.icon  web_discovery_infobar_close_button.icon
app/win/: BUILD.gn
browser/: BUILD.gn  DEPS  about_flags.cc  browser_context_keyed_service_factories.cc  browser_context_keyed_service_factories.h  default_protocol_handler_utils_win.cc  default_protocol_handler_utils_win.h  default_protocol_handler_utils_win_unittest.cc  hns_app_controller_mac.h  hns_app_controller_mac.mm  hns_app_controller_mac_browsertest.mm  hns_autofill_browsertest.cc  hns_browser_features.cc  hns_browser_features.h  hns_browser_main_extra_parts.cc  hns_browser_main_extra_parts.h  hns_browser_main_loop.cc  hns_browser_main_loop.h  hns_browser_main_parts.cc  hns_browser_main_parts.h  hns_browser_main_parts_mac.h  hns_browser_main_parts_mac.mm  hns_browser_process.cc  hns_browser_process.h  hns_browser_process_impl.cc  hns_browser_process_impl.h  hns_content_browser_client.cc  hns_content_browser_client.h  hns_content_browser_client_browsertest.cc  hns_content_browser_client_unittest.cc  hns_drm_tab_helper.cc  hns_drm_tab_helper.h  hns_features_internal_names.h  hns_local_state_prefs.cc  hns_local_state_prefs.h  hns_prefs_browsertest.cc  hns_profile_prefs.cc  hns_profile_prefs.h  hns_resources_browsertest.cc  hns_resources_util_unittest.cc  (+12 more)
browser/android/: BUILD.gn  hns_feature_util.cc  hns_init_android.cc  hns_local_state_android.cc  hns_relaunch_utils.cc  hns_shields_content_settings.cc  hns_shields_content_settings.h  hns_sync_worker.cc  hns_sync_worker.h
browser/autocomplete/: hns_autocomplete_scheme_classifier.cc  hns_autocomplete_scheme_classifier.h  sources.gni
browser/autoplay/: BUILD.gn  autoplay_browsertest.cc
browser/browsing_data/: BUILD.gn  hns_browsing_data_remover_delegate.cc  hns_browsing_data_remover_delegate.h  hns_browsing_data_remover_delegate_unittest.cc  hns_clear_browsing_data.cc  sources.gni  (+2 more)
common/: BUILD.gn  DEPS  hns_channel_info.cc  hns_channel_info.h  hns_channel_info_browsertest.cc  hns_channel_info_posix.cc  hns_channel_info_posix.h  hns_channel_info_unittest.cc  hns_content_client.cc  hns_content_client.h  hns_content_client_unittest.cc  hns_renderer_configuration.mojom  resource_bundle_helper.cc  resource_bundle_helper.h  sources.gni
ios/: BUILD.gn  CPPLINT.cfg  Info.plist
net/: BUILD.gn  sources.gni
renderer/: BUILD.gn  DEPS  hns_content_renderer_client.cc  hns_content_renderer_client.h  hns_render_thread_observer.cc  hns_render_thread_observer.h  hns_url_loader_throttle_provider_impl.cc  hns_url_loader_throttle_provider_impl.h  sources.gni
resources/: BUILD.gn  allowlist.gni  hns_allowlist.py  hns_grit.gni  resource_ids.spec
utility/: BUILD.gn  DEPS  hns_content_utility_client.cc  hns_content_utility_client.h  sources.gni
v8/: sources.gni
(+11650 files in other folders)
