# Copyright (c) 2022 The Hns Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

# Tests that do not run on Android
android_test_exception_sources = [
  "//hns/browser/hns_ads/notification_helper/notification_helper_impl_mock.cc",
  "//hns/browser/hns_ads/notification_helper/notification_helper_impl_mock.h",
  "//hns/browser/hns_ads/search_result_ad/search_result_ad_browsertest.cc",
  "//hns/browser/hns_content_browser_client_browsertest.cc",
  "//hns/browser/hns_scheme_load_browsertest.cc",
  "//hns/browser/hns_search/hns_search_browsertest.cc",
  "//hns/browser/hns_shields/ad_block_service_browsertest.cc",
  "//hns/browser/hns_shields/ad_block_service_browsertest.h",
  "//hns/browser/hns_shields/hns_shields_web_contents_observer_browsertest.cc",
  "//hns/browser/hns_shields/cookie_expiry_browsertest.cc",
  "//hns/browser/hns_shields/domain_block_page_browsertest.cc",
  "//hns/browser/hns_shields/eventsource_pool_limit_browsertest.cc",
  "//hns/browser/hns_shields/websockets_pool_limit_browsertest.cc",
  "//hns/browser/hns_wallet/hns_wallet_ethereum_chain_browsertest.cc",
  "//hns/browser/hns_wallet/hns_wallet_event_emitter_browsertest.cc",
  "//hns/browser/hns_wallet/hns_wallet_service_browsertest.cc",
  "//hns/browser/hns_wallet/hns_wallet_sign_message_browsertest.cc",
  "//hns/browser/hns_wallet/hns_wallet_tab_helper_browsertest.cc",
  "//hns/browser/hns_wallet/ethereum_provider_browsertest.cc",
  "//hns/browser/hns_wallet/send_or_sign_transaction_browsertest.cc",
  "//hns/browser/hns_wallet/solana_provider_browsertest.cc",
  "//hns/browser/hns_wallet/solana_provider_renderer_browsertest.cc",
  "//hns/browser/hns_wallet/wallet_watch_asset_browsertest.cc",
  "//hns/browser/content_settings/hns_content_settings_browsertest.cc",
  "//hns/browser/debounce/debounce_browsertest.cc",
  "//hns/browser/extensions/api/hns_theme_api_browsertest.cc",
  "//hns/browser/extensions/hns_base_local_data_files_browsertest.cc",
  "//hns/browser/extensions/hns_base_local_data_files_browsertest.h",
  "//hns/browser/extensions/hns_crx_generation_browsertest.cc",
  "//hns/browser/extensions/hns_extension_functional_test.cc",
  "//hns/browser/extensions/hns_extension_functional_test.h",
  "//hns/browser/extensions/hns_extension_provider_browsertest.cc",
  "//hns/browser/extensions/hns_theme_event_router_browsertest.cc",
  "//hns/browser/extensions/extension_urls_browsertest.cc",
  "//hns/browser/favicon/favicon_database_browsertest.cc",
  "//hns/browser/perf/hns_perf_features_processor_browsertest.cc",
  "//hns/browser/policy/hns_policy_browsertest.cc",
  "//hns/browser/profiles/hns_bookmark_model_loaded_observer_browsertest.cc",
  "//hns/browser/renderer_context_menu/hns_mock_render_view_context_menu.cc",
  "//hns/browser/renderer_context_menu/hns_mock_render_view_context_menu.h",
  "//hns/browser/renderer_context_menu/hns_spelling_menu_observer_browsertest.cc",
  "//hns/browser/search_engines/search_engine_provider_service_browsertest.cc",
  "//hns/browser/search_engines/search_engine_tracker_browsertest.cc",
  "//hns/browser/speedreader/speedreader_browsertest.cc",
  "//hns/browser/themes/hns_dark_mode_prefs_migration_browsertest.cc",
  "//hns/browser/themes/hns_theme_service_browsertest.cc",
  "//hns/browser/translate/hns_translate_browsertest.cc",
  "//hns/browser/ui/bookmark/bookmark_tab_helper_browsertest.cc",
  "//hns/browser/ui/hns_browser_command_controller_browsertest.cc",
  "//hns/browser/ui/content_settings/hns_autoplay_blocked_image_model_browsertest.cc",
  "//hns/browser/ui/toolbar/hns_app_menu_model_browsertest.cc",
  "//hns/browser/ui/webui/hns_wallet/wallet_panel_ui_browsertest.cc",
  "//hns/browser/ui/webui/new_tab_page/hns_new_tab_ui_browsertest.cc",
  "//hns/browser/ui/webui/private_new_tab_page/hns_private_new_tab_page_browsertest.cc",
  "//hns/browser/ui/webui/welcome_page/hns_welcome_ui_browsertest.cc",
  "//hns/browser/web_package/signed_exchange_request_browsertest.cc",
  "//hns/chromium_src/chrome/browser/safe_browsing/download_protection/check_client_download_request_base_browsertest.cc",
  "//hns/chromium_src/chrome/browser/ui/hats/hats_service_browsertest.cc",
  "//hns/chromium_src/chrome/browser/ui/views/location_bar/location_bar_view_browsertest.cc",
  "//hns/chromium_src/chrome/browser/ui/views/tabs/tab_hover_card_bubble_view_browsertest.cc",
  "//hns/components/hns_perf_predictor/browser/perf_predictor_tab_helper_browsertest.cc",
  "//hns/components/hns_rewards/browser/test/common/rewards_browsertest_context_helper.cc",
  "//hns/components/hns_rewards/browser/test/common/rewards_browsertest_context_helper.h",
  "//hns/components/hns_rewards/browser/test/common/rewards_browsertest_context_util.cc",
  "//hns/components/hns_rewards/browser/test/common/rewards_browsertest_context_util.h",
  "//hns/components/hns_rewards/browser/test/common/rewards_browsertest_contribution.cc",
  "//hns/components/hns_rewards/browser/test/common/rewards_browsertest_contribution.h",
  "//hns/components/hns_rewards/browser/test/common/rewards_browsertest_network_util.cc",
  "//hns/components/hns_rewards/browser/test/common/rewards_browsertest_network_util.h",
  "//hns/components/hns_rewards/browser/test/common/rewards_browsertest_promotion.cc",
  "//hns/components/hns_rewards/browser/test/common/rewards_browsertest_promotion.h",
  "//hns/components/hns_rewards/browser/test/common/rewards_browsertest_response.cc",
  "//hns/components/hns_rewards/browser/test/common/rewards_browsertest_response.h",
  "//hns/components/hns_rewards/browser/test/common/rewards_browsertest_util.cc",
  "//hns/components/hns_rewards/browser/test/common/rewards_browsertest_util.h",
  "//hns/components/hns_rewards/browser/test/rewards_browsertest.cc",
  "//hns/components/hns_rewards/browser/test/rewards_contribution_browsertest.cc",
  "//hns/components/hns_rewards/browser/test/rewards_flag_browsertest.cc",
  "//hns/components/hns_rewards/browser/test/rewards_notification_browsertest.cc",
  "//hns/components/hns_rewards/browser/test/rewards_p3a_browsertest.cc",
  "//hns/components/hns_rewards/browser/test/rewards_promotion_browsertest.cc",
  "//hns/components/hns_rewards/browser/test/rewards_publisher_browsertest.cc",
  "//hns/components/hns_rewards/browser/test/rewards_state_browsertest.cc",
  "//hns/components/hns_shields/browser/https_everywhere_service_browsertest.cc",
  "//hns/components/hns_shields/browser/test_filters_provider.cc",
  "//hns/components/content_settings/renderer/hns_content_settings_agent_impl_browsertest.cc",
  "//hns/third_party/blink/renderer/modules/hns/navigator_browsertest.cc",
  "//chrome/browser/extensions/browsertest_util.cc",
  "//chrome/browser/extensions/browsertest_util.h",
  "//chrome/browser/extensions/extension_browsertest.cc",
  "//chrome/browser/extensions/extension_browsertest.h",
  "//chrome/browser/media/media_browsertest.cc",
  "//chrome/browser/media/media_browsertest.h",
  "//chrome/browser/ui/test/test_browser_dialog.cc",
  "//chrome/browser/ui/test/test_browser_dialog.h",
  "//chrome/browser/ui/test/test_browser_ui.cc",
  "//chrome/browser/ui/test/test_browser_ui.h",
]

android_test_exception_deps = [
  "//hns/browser/autoplay:browser_tests",
  "//hns/browser/hns_news:browser_tests",
  "//hns/browser/hns_rewards/test:browser_tests",
  "//hns/browser/browsing_data:browser_tests",
  "//hns/browser/decentralized_dns/test:browser_tests",
  "//hns/browser/extensions",
  "//hns/browser/farbling:browser_tests",
  "//hns/browser/net:browser_tests",
  "//hns/browser/permissions:browser_tests",
  "//hns/browser/playlist/test:browser_tests",
  "//hns/browser/test:browser_tests",
  "//hns/browser/ui:browser_tests",
  "//hns/browser/ui/tabs/test:browser_tests",
  "//hns/browser/ui/views/tabs:browser_tests",
  "//hns/components/hns_wallet/resources:ethereum_provider_generated_resources",
  "//hns/components/de_amp/browser/test:browser_tests",
  "//hns/renderer/skus:browser_tests",
  "//hns/renderer/test:browser_tests",
  "//chrome/browser/web_applications",
  "//chrome/test:test_support_ui",
  "//extensions/browser:test_support",
  "//extensions/common:common_constants",
  "//extensions/common:test_support",
  "//ui/views",
]

# Tests that run only on Android
android_only_test_sources = [
  "//hns/components/hns_wallet/browser/android_page_appearing_browsertest.cc",
  "//chrome/test/android/browsertests_apk/android_browsertests_jni_onload.cc",
  "//chrome/test/base/android/android_browser_test_browsertest_android.cc",
]

android_only_test_deps = [
  ":test_support",
  "//android_webview/common",
  "//hns/browser/partnercustomizations:delegate_public_impl_java",
  "//hns/components/hns_wallet/browser:test_support",
  "//hns/components/cosmetic_filters/browser:browser",
  "//chrome:chrome_android_core",
  "//chrome/android:app_hooks_java",
  "//chrome/android:delegate_public_impl_java",
  "//chrome/browser/flags:flags_android",
  "//chrome/browser/lens:delegate_public_impl_java",
  "//chrome/browser/locale:delegate_public_impl_java",
  "//chrome/browser/metrics:test_support",
  "//chrome/test:android_browsertests_assets",
  "//chrome/test:android_browsertests_java",
  "//chrome/test:browser_tests_runner",
  "//chrome/test:test_support",
  "//chrome/test:test_support_ui_android",
  "//components/browser_ui/widget/android:java",
  "//components/externalauth/android:google_delegate_public_impl_java",
  "//components/language/android:ulp_delegate_public_java",

  # TODO(crbug.com/961849): This is needed for ShellManager which is what
  # the ChromeBrowserTestsActivity is using to build the java UI. It's
  # likely we want to replace it with something new that uses ChromeWindow
  # and CompositorViewHolder instead.
  "//content/shell:content_shell_lib",
  "//content/test:android_test_message_pump_support",
  "//testing/android/native_test:native_test_support",
]
